# rt_imu_lib_driver

./: CMakeLists.txt  LICENSE  README.md  package.xml
docs/: imu_calibration.txt  rti_imu_lib_install.sh
scripts/: RTIMULib.ini  rt_imu_lib_driver.py
